--- a/LiHuo/SimpleLiHuo.csproj
+++ b/LiHuo/SimpleLiHuo.csproj
@@ -54,18 +54,6 @@
     <Compile Include="Query.Designer.cs">
       <DependentUpon>Query.cs</DependentUpon>
     </Compile>
-    <Compile Include="ScanFast.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ScanFast.Designer.cs">
-      <DependentUpon>ScanFast.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Scan.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Scan.Designer.cs">
-      <DependentUpon>Scan.cs</DependentUpon>
-    </Compile>
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -80,6 +68,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="QueryForm.Designer.cs">
+      <DependentUpon>QueryForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="ScanForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -98,12 +92,6 @@
     <Compile Include="UserEdit.Designer.cs">
       <DependentUpon>UserEdit.cs</DependentUpon>
     </Compile>
-    <Compile Include="Import.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Import.Designer.cs">
-      <DependentUpon>Import.cs</DependentUpon>
-    </Compile>
     <Compile Include="UserManager.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -112,12 +100,6 @@
     </Compile>
     <EmbeddedResource Include="Query.resx">
       <DependentUpon>Query.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ScanFast.resx">
-      <DependentUpon>ScanFast.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Scan.resx">
-      <DependentUpon>Scan.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
@@ -135,14 +117,14 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="QueryForm.resx">
+      <DependentUpon>QueryForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ScanForm.resx">
       <DependentUpon>ScanForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UserEdit.resx">
       <DependentUpon>UserEdit.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Import.resx">
-      <DependentUpon>Import.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UserManager.resx">
       <DependentUpon>UserManager.cs</DependentUpon>
