--- a/LiHuo/App.config
+++ b/LiHuo/App.config
@@ -7,4 +7,7 @@
   <connectionStrings>
     <add name="ConnString" connectionString="Server=.;Database=ShenZhenLiHuo;Uid=sa;Pwd=sasa;Max Pool Size=500" providerName="System.Data.SqlClient"/>
   </connectionStrings>
+  <appSettings>
+    <add key="ScanFailCode" value="SCAN FAIL"/>
+  </appSettings>
 </configuration>
